--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,26 @@
+*.gem
+*.rbc
+.bundle
+.config
 .repl_history
-build
-tags
-app/pixate_code.rb
+**build
+coverage
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
 resources/*.nib
 resources/*.momd
 resources/*.storyboardc
-.DS_Store
-nbproject
-.redcar
-#*#
-*~
-*.sw[po]
-.eprj
-.sass-cache
-.idea
-.dat*.*
+resources/*.xcdatamodeld
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+vendor/**/build*
+
+# YARD artifacts
+.yardoc
+_yardoc
+doc/
 provisioning
